deploy: 891b6e44d4e0d289701eaa5d64423f5fdcf6bc9a

--- a/part1/project-lifecycles.html
+++ b/part1/project-lifecycles.html
@@ -673,7 +673,7 @@ environment similar to the end-user experience.</p>
 <p>There are several types of testing, some examples include:</p>
 <ul class="simple">
 <li><p><strong>Unit testing</strong>: are all components working?</p></li>
-<li><p>**Integration testing”: are all components working when fitted together?</p></li>
+<li><p><strong>Integration testing</strong>: are all components working when fitted together?</p></li>
 <li><p><strong>Performance testing</strong>: how does the software perform against different
 workloads? It is fast? Stable?</p></li>
 <li><p><strong>Functional testing</strong>: is the software aligned with Software
