deploy: b6f827af1473e25b10734dedbb56971693798517

--- a/part3/study-case.html
+++ b/part3/study-case.html
@@ -94,7 +94,7 @@ const thebe_selector_output = ".output, .cell_output"
     <div class="bd-toc-item active">
         <p aria-level="2" class="caption" role="heading">
  <span class="caption-text">
-  Learning to develop software tools
+  Software development in a nutshell
  </span>
 </p>
 <ul class="nav bd-sidenav">
