--- a/genindex.html
+++ b/genindex.html
@@ -93,7 +93,7 @@ const thebe_selector_output = ".output, .cell_output"
     <div class="bd-toc-item active">
         <p aria-level="2" class="caption" role="heading">
  <span class="caption-text">
-  Learning to develop software tools
+  Software development in a nutshell
  </span>
 </p>
 <ul class="nav bd-sidenav">
